# diatom-digi-slides

./: .gitignore  .prettierignore  README.md  one_slide.py  pyproject.toml
d10n/: __init__.py  basic.py  dij.py  metadata.py
d10n/classes/: __init__.py  digislide.py
diatom_digi_slides/: one_slide.py
diatom_digi_slides/d10n/: basic.py  dij.py  metadata.py
diatom_digi_slides/d10n/classes/: digislide.py
